--- a/stack.yaml
+++ b/stack.yaml
@@ -44,7 +44,8 @@ extra-deps:
   - conduit-combinators-1.0.8.3
   - conduit-1.2.8
   # - irc-0.6.1.0  # dependency of irc-client
-  - brick-0.10
+  - brick-0.14
+  - vty-5.12
   - text-zipper-0.7.1  # dependency of brick
 
 # Override default flag values for local packages and extra-deps
