--- a/stack.yaml
+++ b/stack.yaml
@@ -47,6 +47,8 @@ extra-deps:
   - brick-0.14
   - vty-5.12
   - text-zipper-0.7.1  # dependency of brick
+  - hindent-5.2.1
+  - haskell-src-exts-1.19.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
